--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,30 @@
 EDSidebar.xcodeproj/ernesto.pbxuser
 
 EDSidebar.xcodeproj/ernesto.mode1v3
+
+
+# Mac OS X
+*.DS_Store
+
+# Xcode
+*.pbxuser
+*.mode1v3
+*.mode2v3
+*.perspectivev3
+*.xcuserstate
+project.xcworkspace/
+xcuserdata/
+
+# Generated files
+*.[oa]
+*.pyc
+*.6
+6.out
+
+#Python modules
+MANIFEST
+dist/
+build/
+
+# Backup files
+*~.nib
